--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
+.jumbotron{
+  background-image: url('./components/images/img1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 700px;
+}
+
+.button{
+  border-radius: 35px;
+  background-color:#8C3939;
+  width: 145.85px;
+  height: 33.12px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+ 
+}
+
+.button1{
+  margin-right: 580px;
+  border-radius: 35px;
+  background-color:#8C3939;
+  width: 145.85px;
+  height: 33.12px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px
+}
+
+h1{
   text-align: center;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 690px;
+  text-transform: uppercase;
+  margin: 150px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h4{
+  text-align: center;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 690px;
+  text-transform:uppercase;
+  padding-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img{
+width: 110px;
+height: 200px;
+
+}
+.img1{
+width: 36px;
+height: 31px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box{ 
+width: 1110px;
+height: 100px;
+margin-top: 635px;
+background-color: #D9D9D9;
+border-radius: 3px;
+}
+
+.box1{
+  width: 200px;
+  height: 30px;
+  margin: 10px;
+  margin-top: 30px;
+  margin-left: 20px;
+  
+}
+.content{
+font-family: 'Inter';
+font-weight: 700px;
+font-size: 12px;
+text-align: center;
+margin-top: 120px;
+
+}
+.stars{
+ 
+  margin-top: 20px;
+  width: 19px;
+  height: 19px;
+  margin-bottom: 32px;
+  
+}
+
+
+.card{
+  margin: 10px;
+  width:100px;
+  margin-top: 80px;
+}
+.row1{
+  float: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+h5{
+  text-align: center;
+  margin: 30px;
+  text-decoration: double;
+  margin: bottom 100px;
+}
+.form-popup{
+  box-sizing: border-box;
+  background-color: #D9D9D9;
+  width: 1095px;
+  height: 310px;
+  margin-top: 150px;
+ border:3px solid #f1f1f1;
+  text-align: right;
+ }
+ /* Full-width input fields */
+ .form-container input[type=text], .form-container input[type=password] {
+  width: 48%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: white;
+  text-align: left;
+ 
+ }
+ .Address{
+  width: 127px;
+  height: 100px;
+  left: 39px;
+  margin-right:5px;
+  padding-top: 20px;
+ }
+ .form-group{
+  width: 300px;
+ height: 29px;
+margin: 80px;
+background: #D9D9D9;
+ }
+
+ .button2{
+width: 118px;
+height: 44px;
+background: #8C3939;
+border-radius: 8px;
+margin-left: 0px;
+margin-top: 80px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 20px;
+line-height: 24px;
+display:flexbox;
+
 }
 
-.App-link {
-  color: #61dafb;
+ 
+.jumbotron1{
+  background-image: url('./components/images/image1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+  margin-top: 40px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-fluid{
+  width: 393px;
+  height: 800px;
+  margin: 40px;
+  margin-right: 0px;
+  display: flex;
 }
+.signin{
+  margin-top: -120px;
+  width: 950px;
+  height: 700px;
+  box-shadow: 0px 4px 4px rgba(0,0,0,25);
+  margin-left: 150px;
+  background-color: #FFFF;
+ 
+}
+.img3{
+  margin-right: 40px;
+  float: right;
+  width:80px;
+  height:900px;
+}
+
